[project]
name = "researcher-mcp"
version = "0.1.0"
description = "MCP server for scientific research with multiple sources"
authors = [
  { name = "A.O Klimov", email = "aleklim98@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.5",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.12.0",
]
